<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_f0f0f0"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white_fff">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/dpsz_ewm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/setting_scan_code"
            android:textColor="@color/grey_666"
            android:textSize="@dimen/text_size_12" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_check_versioncode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_versioncode"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_set_versioncode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:maxLength="20"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="15dp"
        android:background="@color/grey_ccc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_clear"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_set_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_bg"
        android:enabled="true"
        android:text="@string/setting_login_out"
        android:textColor="@color/white_fff"
        android:textSize="@dimen/text_size_15" />
</LinearLayout>