<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_f0f0f0"
    android:orientation="vertical">

    <include layout="@layout/common_head"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_logo"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:id="@+id/iv_store_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/image_bg"
            android:src="@mipmap/wddp_dplogo" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_ccc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_name"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_store_name"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLength="20"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_666"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_ccc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_location"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_store_location"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/long_text_test"
            android:maxLength="20"
            android:textColor="@color/grey_666"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_ccc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_address"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />

        <TextView
            android:id="@+id/tv_store_address"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:maxLength="20"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_666"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>
    <View
        android:layout_marginLeft="15dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/grey_ccc"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_fff"
        android:paddingBottom="12dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_333"
            android:textSize="@dimen/text_size_14" />
        <TextView
            android:id="@+id/tv_store_pay_method"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/store_pay_method"
            android:textColor="@color/grey_666"
            android:textSize="@dimen/text_size_14" />

    </RelativeLayout>
</LinearLayout>